# hongkongukah-com

./: .gitignore  .pre-commit-config.yaml  .python-version.license  Makefile  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: publish.yml
core/: admin.py  apps.py  tests.py  urls.py  views.py
core/migrations/: __init__.py
docker/: Dockerfile  prod-docker-compose.yaml  test-docker-compose.yaml
hongkongukah/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
hongkongukah/static/css/: style.css
hongkongukah/static/py/: countdown.py
hongkongukah/templates/: about.html  bingo.html  charity.html  index.html
hongkongukah/templates/layout/: _footer.html  _header.html  _layout.html
